[EFL] Wrong button height on CSS tests https://bugs.webkit.org/show_bug.cgi?id=85494

Source/WebCore:

Patch by KyungTae Kim <ktf.kim@samsung.com> on 2012-08-27
Reviewed by Gyuyoung Kim.

The codes for overriding styles for buttons must be removed
for passing the layout test 'fast/css/button-height.html'.

The 'resetBorder' reset border style for a button (2px outset) to the initial value,
and it makes the size of <input type=button> different from the size of <button>.
('fast/css/button-height.html' checks whether they are same.)

The 'setWhiteSpace' is not needed because the white space already set to 'PRE'.

The 'setHeight' reset the 'height' style that should not be reset.
('fast/css/buttons-height.html' set the button's height style.)

Tests : fast/css/button-height.html
        fast/css/continuationCrash.html
        fast/css/margin-top-bottom-dynamic.html
        fast/css/rtl-ordering.html
        fast/dom/HTMLTextAreaElement/reset-textarea.html
        fast/forms/basic-buttons.html
        fast/forms/blankbuttons.html
        fast/forms/box-shadow-override.html
        fast/forms/button-positioned.html
        fast/forms/button-sizes.html
        fast/forms/button-style-color.html
        fast/forms/button-table-styles.html
        fast/forms/button-text-transform.html
        fast/forms/control-restrict-line-height.html
        fast/forms/file/file-input-direction.html
        fast/forms/file/file-input-disabled.html
        fast/forms/formmove3.html
        fast/forms/input-appearance-height.html
        fast/forms/input-button-sizes.html
        fast/forms/input-value.html
        fast/forms/targeted-frame-submission.html
        fast/html/details-replace-summary-child.html
        fast/html/details-replace-text.html
        fast/overflow/scroll-nested-positioned-layer-in-overflow.html
        fast/overflow/scrollRevealButton.html
        fast/replaced/replaced-breaking.html
        fast/replaced/width100percent-button.html
        fast/text/textIteratorNilRenderer.html

* platform/efl/RenderThemeEfl.cpp:
(WebCore::RenderThemeEfl::adjustButtonStyle): No longer override CSS properties for button styling.

LayoutTests:

Patch by KyungTae Kim <ktf.kim@samsung.com> on 2012-08-27
Reviewed by Gyuyoung Kim.

This patch changes styles of buttons (not to reset border style).
Update baselines for tests include buttons.

* platform/efl/TestExpectations:
* platform/efl/fast/css/continuationCrash-expected.png:
* platform/efl/fast/css/continuationCrash-expected.txt:
* platform/efl/fast/css/margin-top-bottom-dynamic-expected.png:
* platform/efl/fast/css/margin-top-bottom-dynamic-expected.txt:
* platform/efl/fast/css/rtl-ordering-expected.png:
* platform/efl/fast/css/rtl-ordering-expected.txt:
* platform/efl/fast/dom/HTMLTextAreaElement/reset-textarea-expected.png:
* platform/efl/fast/dom/HTMLTextAreaElement/reset-textarea-expected.txt:
* platform/efl/fast/forms/basic-buttons-expected.png:
* platform/efl/fast/forms/basic-buttons-expected.txt:
* platform/efl/fast/forms/blankbuttons-expected.png:
* platform/efl/fast/forms/blankbuttons-expected.txt:
* platform/efl/fast/forms/box-shadow-override-expected.png:
* platform/efl/fast/forms/box-shadow-override-expected.txt:
* platform/efl/fast/forms/button-positioned-expected.png:
* platform/efl/fast/forms/button-positioned-expected.txt:
* platform/efl/fast/forms/button-sizes-expected.png:
* platform/efl/fast/forms/button-sizes-expected.txt:
* platform/efl/fast/forms/button-style-color-expected.png:
* platform/efl/fast/forms/button-style-color-expected.txt:
* platform/efl/fast/forms/button-table-styles-expected.png:
* platform/efl/fast/forms/button-table-styles-expected.txt:
* platform/efl/fast/forms/button-text-transform-expected.png:
* platform/efl/fast/forms/button-text-transform-expected.txt:
* platform/efl/fast/forms/control-restrict-line-height-expected.png:
* platform/efl/fast/forms/control-restrict-line-height-expected.txt:
* platform/efl/fast/forms/file/file-input-direction-expected.png:
* platform/efl/fast/forms/file/file-input-direction-expected.txt:
* platform/efl/fast/forms/file/file-input-disabled-expected.png:
* platform/efl/fast/forms/file/file-input-disabled-expected.txt:
* platform/efl/fast/forms/formmove3-expected.png:
* platform/efl/fast/forms/formmove3-expected.txt:
* platform/efl/fast/forms/input-appearance-height-expected.png:
* platform/efl/fast/forms/input-appearance-height-expected.txt:
* platform/efl/fast/forms/input-button-sizes-expected.png:
* platform/efl/fast/forms/input-button-sizes-expected.txt:
* platform/efl/fast/forms/input-value-expected.png:
* platform/efl/fast/forms/input-value-expected.txt:
* platform/efl/fast/forms/targeted-frame-submission-expected.png:
* platform/efl/fast/forms/targeted-frame-submission-expected.txt:
* platform/efl/fast/html/details-replace-summary-child-expected.png:
* platform/efl/fast/html/details-replace-summary-child-expected.txt:
* platform/efl/fast/html/details-replace-text-expected.png:
* platform/efl/fast/html/details-replace-text-expected.txt:
* platform/efl/fast/overflow/scroll-nested-positioned-layer-in-overflow-expected.png:
* platform/efl/fast/overflow/scroll-nested-positioned-layer-in-overflow-expected.txt:
* platform/efl/fast/overflow/scrollRevealButton-expected.png:
* platform/efl/fast/overflow/scrollRevealButton-expected.txt:
* platform/efl/fast/replaced/replaced-breaking-expected.png:
* platform/efl/fast/replaced/replaced-breaking-expected.txt:
* platform/efl/fast/replaced/width100percent-button-expected.png:
* platform/efl/fast/replaced/width100percent-button-expected.txt:

Canonical link: https://commits.webkit.org/112931@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@126750 268f45cc-cd09-0410-ab3c-d52691b4dbfc